integrasi spin the wheel - 5

--- a/src/app/pages/dte/spin-the-wheel/create/spin-the-wheel-create.component.html
+++ b/src/app/pages/dte/spin-the-wheel/create/spin-the-wheel-create.component.html
@@ -1,7 +1,7 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
   <page-content-header contentTitle="Buat Spin The Wheel">
-    <button id="btn-create-trade" style="width: 170px" [routerLink]="['/dte','spin-the-wheel']" mat-raised-button type="button">
+    <button id="btn-create-trade" style="width: 170px" (click)="submit()" mat-raised-button type="button">
       <mat-icon>save</mat-icon> {{'global.button.save' | translate}}
     </button>
   </page-content-header>
